<resources>
    <string name="app_name">MAGIC LIFE</string>
    <string name="p1Score">20</string>
    <string name="p2Score">20</string>
    <string name="p3Score">20</string>
    <string name="p4Score">20</string>
    <string name="p1Name">Player 1</string>
    <string name="p2Name">Player 2</string>
    <string name="p3Name">Player 3</string>
    <string name="p4Name">Player 4</string>
    <string name="resetBtn">Resets scores of game</string>
    <string name="player_opt_btn_bg_desc">Background for player options button</string>
    <string name="set_players">Set Players</string>
    <string name="choose_layout">Choose Layout</string>
    <string name="defaultLife">20</string>
    <string name="cont_str">Continue</string>
    <string name="choose_lifecount_str">CHOOSE LIFECOUNT</string>
    <string name="options_button_desc">Options Button</string>
    <string name="begin_str">Begin</string>
    <string name="layout_2_str">Layout 2</string>
    <string name="layout_1_str">Layout 1</string>
    <string name="_2_player_button_str">2 player button</string>
    <string name="_4_player_button_str">4 player button</string>
    <string name="_3_player_button_str">3 player button</string>
    <string name="close_str">Close</string>
    <string name="home_button_str">Home button</string>
    <string name="back_str">Back</string>
    <string name="select_dice_roll_string">Tap to roll</string>
    <string name="d20_title_string">20-Sided Dice Roll:</string>
    <string name="d12_title_string">12-Sided Dice Roll:</string>
    <string name="d10_title_string">10-Sided Dice Roll:</string>
    <string name="d8_title_string">8-Sided Dice Roll:</string>
    <string name="d6_title_string">6-Sided Dice Roll:</string>
    <string name="d4_title_string">4-Sided Dice Roll:</string>
    <string name="dice_roll_button_string">Dice roll button</string>
    <string name="roll_4_sided_die_string">Roll 4-sided die</string>
    <string name="roll_6_sided_die_string">roll 6-sided die</string>
    <string name="roll_8_sided_die_string">roll 8-sided die</string>
    <string name="roll_10_sided_die_string">roll 10-sided die</string>
    <string name="roll_12_sided_die_string">roll 12-sided die</string>
    <string name="roll_20_sided_die_string">roll 20-sided die</string>
    <string name="begin_string">Begin</string>
</resources>
