<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OptionsActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="190dp"
        android:layout_height="71dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="102dp"
        android:background="@color/transparent"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/back_str"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/homeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        android:contentDescription="@string/home_button_str"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/resetBtn"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="40dp"
        android:background="@color/transparent"
        android:contentDescription="@string/home_button_str"
        app:srcCompat="@android:drawable/ic_menu_revert" />
    <ImageButton
        android:id="@+id/diceBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="328dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_dice"
        android:contentDescription="@string/dice_roll_button_string" />

</RelativeLayout>