<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FourPlayerActivity">

    <android.support.constraint.Guideline
        android:id="@+id/hG2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <android.support.constraint.Guideline
        android:id="@+id/hG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.735" />

    <android.support.constraint.Guideline
        android:id="@+id/vLeftG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <android.support.constraint.Guideline
        android:id="@+id/vRightG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.51" />

    <android.support.constraint.Guideline
        android:id="@+id/hG3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <android.support.constraint.Guideline
        android:id="@+id/hG4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".265" />

    <LinearLayout
        android:id="@+id/p4Container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/container4_bg"
        app:layout_constraintBottom_toBottomOf="@id/hG4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/p4DownBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/p4UpBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p2Container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/container2_bg"
        app:layout_constraintBottom_toBottomOf="@id/hG2"
        app:layout_constraintEnd_toEndOf="@id/vLeftG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hG3">

        <Button
            android:id="@+id/p2DownBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/p2UpBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p3Container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/container3_bg"
        app:layout_constraintBottom_toBottomOf="@id/hG2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vRightG"
        app:layout_constraintTop_toTopOf="@id/hG3">

        <Button
            android:id="@+id/p3UpBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/p3DownBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p1Container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/container1_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hG1">

        <Button
            android:id="@+id/p1UpBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/p1DownBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/p1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1Score"
        android:textAlignment="textStart"
        android:textColor="#333333"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p1Container"
        app:layout_constraintEnd_toEndOf="@id/p1Container"
        app:layout_constraintStart_toStartOf="@id/p1Container"
        app:layout_constraintTop_toTopOf="@id/p1Container" />

    <TextView
        android:id="@+id/p1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1Name"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/p1Score"
        app:layout_constraintEnd_toEndOf="@id/p1Container"
        app:layout_constraintStart_toStartOf="@id/p1Container"
        app:layout_constraintTop_toBottomOf="@id/playerOptBg" />

    <TextView
        android:id="@+id/p2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:text="@string/p2Score"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p2Container"
        app:layout_constraintEnd_toEndOf="@id/p2Container"
        app:layout_constraintStart_toStartOf="@id/p2Container"
        app:layout_constraintTop_toTopOf="@id/p2Container" />

    <TextView
        android:id="@+id/p2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:text="@string/p2Name"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p2Container"
        app:layout_constraintEnd_toEndOf="@id/p2Container"
        app:layout_constraintStart_toEndOf="@id/p2Score"
        app:layout_constraintTop_toTopOf="@id/p2Container" />

    <TextView
        android:id="@+id/p3Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-90"
        android:text="@string/p3Score"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p3Container"
        app:layout_constraintEnd_toEndOf="@id/p3Container"
        app:layout_constraintStart_toStartOf="@id/p3Container"
        app:layout_constraintTop_toTopOf="@id/p3Container" />

    <TextView
        android:id="@+id/p3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-90"
        android:text="@string/p3Name"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p3Container"
        app:layout_constraintEnd_toStartOf="@id/p3Score"
        app:layout_constraintStart_toStartOf="@id/p3Container"
        app:layout_constraintTop_toTopOf="@id/p3Container" />

    <TextView
        android:id="@+id/p4Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/p4Score"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p4Container"
        app:layout_constraintEnd_toEndOf="@id/p4Container"
        app:layout_constraintStart_toStartOf="@id/p4Container"
        app:layout_constraintTop_toTopOf="@id/p4Container" />

    <TextView
        android:id="@+id/p4Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/p4Name"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p4Container"
        app:layout_constraintEnd_toEndOf="@id/p4Container"
        app:layout_constraintStart_toStartOf="@id/p4Container"
        app:layout_constraintTop_toBottomOf="@id/p4Score" />

    <android.support.constraint.Guideline
        android:id="@+id/oTopG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <android.support.constraint.Guideline
        android:id="@+id/oBottomG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <ImageView
        android:id="@+id/playerOptBg"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/player_opt_btn_bg_desc"

        app:layout_constraintBottom_toBottomOf="@id/oBottomG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/oTopG"
        app:srcCompat="@drawable/ic_lens_black_24dp" />

    <ImageButton
        android:id="@+id/playerOptBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:background="#0000"
        app:layout_constraintBottom_toBottomOf="@id/playerOptBg"
        app:layout_constraintEnd_toEndOf="@id/playerOptBg"
        app:layout_constraintStart_toStartOf="@id/playerOptBg"
        app:layout_constraintTop_toTopOf="@id/playerOptBg"
        app:srcCompat="@drawable/ic_gps_fixed_black_24dp" />


</android.support.constraint.ConstraintLayout>