<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/p1Container"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/container1_bg"
        app:layout_constraintBottom_toBottomOf="@id/p2BottomG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/p1DownBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/p1UpBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/p2Container"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/container2_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/p1TopG">

        <Button
            android:id="@+id/p2DownBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:rotation="180"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/p2UpBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/p1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:text="@string/p1Score"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/p1Container"
        app:layout_constraintEnd_toEndOf="@+id/p1Container"
        app:layout_constraintStart_toStartOf="@+id/p1Container"
        app:layout_constraintTop_toTopOf="@id/p1Container" />

    <TextView
        android:id="@+id/p2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:text="@string/p2Score"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p2Container"
        app:layout_constraintEnd_toEndOf="@+id/p2Container"
        app:layout_constraintStart_toStartOf="@+id/p2Container"
        app:layout_constraintTop_toTopOf="@+id/p2Container" />

    <TextView
        android:id="@+id/p1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:text="@string/p1Name"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p1Container"
        app:layout_constraintEnd_toEndOf="@id/p1Container"
        app:layout_constraintStart_toEndOf="@id/p1Score"
        app:layout_constraintTop_toTopOf="@id/p1Container" />

    <TextView
        android:id="@+id/p2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:text="@string/p2Name"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/p2Container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/p2Score"
        app:layout_constraintTop_toTopOf="@id/p2Container" />

    <android.support.constraint.Guideline
        android:id="@+id/p2BottomG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <android.support.constraint.Guideline
        android:id="@+id/p1TopG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <ImageView
        android:id="@+id/playerOptBg"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/player_opt_btn_bg_desc"
        app:layout_constraintBottom_toTopOf="@id/p1Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/p2Name"
        app:srcCompat="@drawable/ic_lens_black_24dp" />

    <ImageButton
        android:id="@+id/playerOptBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:contentDescription="@string/player_opt_btn_desc"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="@id/playerOptBg"
        app:layout_constraintEnd_toEndOf="@id/playerOptBg"
        app:layout_constraintStart_toStartOf="@id/playerOptBg"
        app:layout_constraintTop_toTopOf="@id/playerOptBg"
        app:srcCompat="@drawable/ic_gps_fixed_black_24dp" />

</android.support.constraint.ConstraintLayout>